# GraphRag

./: .editorconfig  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SERVER_COMMANDS.md  constraints-langchain.txt  deploy.sh  docker-compose.ghcr.yml  docker-compose.yml  install_python.sh  pyproject.toml  requirements.txt  server-deploy.sh  structure.md
.github/workflows/: build-containers.yml  ci.yml
scripts/: add_doc_to_source.py  add_embeddings.py  backup_neo4j.sh  create_fulltext_index.py  extract_entities.py  rechunk_json.py  restore_neo4j.sh  run_eval.py  run_local_check.ps1  setup_venv.ps1
src/: __init__.py
src/api/: __init__.py  health.py
src/bot/: __init__.py  rate_limiter.py  telegram_bot.py
src/core/: __init__.py  llm_config.py  logging_config.py  metrics.py  orchestrator.py
src/data/: __init__.py  document_utils.py  graph_rag.py  ingest_single.py  ingestion.py  neo4j_client.py  vector_store.py
src/data/source/Json/: adliya_reg_1364_20040521.json  adliya_reg_1946_20090424.json  adliya_reg_1996_20090818.json  adliya_reg_2501_20130814.json  adliya_reg_3259_20200630.json  adliya_reg_3531_20240718.json  adliya_reg_3533_20240723.json  adliya_reg_3534_20240724.json  adliya_reg_3535_20240725.json  adliya_reg_3537_20240726.json  adliya_reg_3539_20240731.json  adliya_reg_3540_20240801.json  adliya_reg_3542_20240805.json  adliya_reg_3544_20240806.json  adliya_reg_3546_20240809.json  adliya_reg_3547_20240809.json  (+3 more)
tests/: conftest.py  eval_questions.json  test_graph_rag.py  test_ingestion.py  test_neo4j_client.py  test_orchestrator.py  test_telegram_bot.py
(+19 files in other folders)
